2018-02-02  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* malloc/Makefile (test-internal): Add tst-char_array.
	(routines): Add dynarray_overflow_failure and char_array-impl.
	* malloc/Versions [GLIBC_PRIVATE] (libc): Add
	__libc_dynarray_overflow_failure, __char_array_set_str_size,
	__char_array_erase, __char_array_prepend_str_size, and
	__char_array_replace_str_pos.
	* malloc/char_array-impl.c: New file.
	* malloc/char_array-skeleton.c: Likewise.
	* malloc/char_array.h: Likewise.
	* malloc/tst-char-array.c: Likewise.
	* malloc/dynarray_overflow_failure.c: Likewise.
	* malloc/malloc-internal.h (check_add_overflow_size_t): New function.

2018-02-02  Sean McKean  <smckean83@gmail.com>

	[BZ #22735]
	* time/time.h (clock): Reference CLOCKS_PER_SEC in comment.

2018-02-02  Florian Weimer  <fweimer@redhat.com>

	[BZ #22753]
	* sysdeps/posix/preadv2.c (preadv2): Handle offset == -1.
	* sysdeps/posix/preadv64v2.c (preadv64v2): Likewise.
	* sysdeps/posix/pwritev2.c (pwritev2): Likewise.
	* sysdeps/posix/pwritev64v2.c (pwritev64v2): Likweise.
	* sysdeps/unix/sysv/linux/preadv2.c (preadv2): Likewise.
	* sysdeps/unix/sysv/linux/preadv64v2.c (preadv64v2): Likewise.
	* sysdeps/unix/sysv/linux/pwritev2.c (pwritev2): Likewise.
	* sysdeps/unix/sysv/linux/pwritev64v2.c (pwritev64v2): Likweise.
	* manual/llio.texi (Scatter-Gather): Mention offset -1.
	* misc/tst-preadvwritev-common.c (do_test_without_offset): New.
	* misc/tst-preadvwritev2.c (do_test): Call it.
	* misc/tst-preadvwritev64v2.c (do_test): Likewise.

2018-02-02  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/memcmp.S: Use L() macro for labels.

	* benchtests/bench-memcmp.c: Print json instead of plain text.

	* benchtests/bench-memcmp.c (do_test): Call realloc_buf for
	every test run.

2018-02-01  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/syscall-names.list: Update kernel
	version to 4.15.
	(s390_sthyi): New syscall.
