@@ -1,5 +1,7 @@
 2018-02-02  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* posix/globc.c (glob): Use char_array for dirname.
+
 	* malloc/Makefile (test-internal): Add tst-char_array.
 	(routines): Add dynarray_overflow_failure and char_array-impl.
 	* malloc/Versions [GLIBC_PRIVATE] (libc): Add
